--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,5 +4,5 @@
     "outDir": "./dist"
   },
   "include": ["src"],
-  "exclude": ["tests", "**/*.spec.ts", "src/TEMP-SCRIPTS"]
+  "exclude": ["tests", "**/*.spec.ts", "src/scripts"]
 }
