--- a/fly.toml
+++ b/fly.toml
@@ -1,35 +1,23 @@
-app = 'hivemind'
+# fly.toml app configuration file generated for agent-hivemind on 2026-01-29T20:42:14Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'agent-hivemind'
 primary_region = 'ewr'
 
-
-[env]
-LOG_LEVEL='info'
-HOST = '0.0.0.0'
-API_HOST='hivemind.fly.dev'
-NODE_ENV = 'production'
-DATA_DIR = '/data/'
-
-[processes]
-api = 'pnpm run start'
+[build]
 
 [http_service]
-internal_port = 3000
-force_https = true
-auto_start_machines = false
-min_machines_running = 1
-processes = ['api']
-
-[[http_service.checks]]
-interval = '10s'
-timeout = '5s'
-grace_period = '10s'
-method = 'GET'
-path = '/'
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-size = 'performance-2x'
-processes = ['api']
-
-[mounts]
-source = 'hivemind_sqlite3'
-destination = '/data/'
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
